--- a/styles.scss
+++ b/styles.scss
@@ -42,6 +42,43 @@ body {
             width: 100vw;
             overflow: hidden;
 
+            div.name-container{
+                overflow: hidden;
+                position: absolute;
+                top: 0;
+                left: 0;
+                // border: 2px solid red;
+                width: 550px;
+                height: 550px;
+
+        
+                .name {
+                    font-family: 'Arial Black', Gadget, sans-serif;
+                    color: white;
+                    font-size: 8rem;
+                    margin: 0;
+                    position: absolute;
+                    top: 30vh;
+                    overflow: hidden;
+                }
+        
+                #one {
+                    top: 50px;
+                    left: 50px;
+                }
+                
+                #two {
+                    top: 150px;
+                    left: 50px;
+                }
+                
+                #three {
+                    top: 250px;
+                    left: 50px;
+                    color: red;
+                }
+            }
+
             .flex-right, .flex-left {
                 flex: 1;
                 border: 1px solid white;
@@ -128,35 +165,6 @@ body {
 
     }
 
-    div.name-container{
-        overflow: hidden;
-
-        .name {
-            font-family: 'Arial Black', Gadget, sans-serif;
-            color: white;
-            font-size: 8rem;
-            margin: 0;
-            position: absolute;
-            top: 30vh;
-            overflow: hidden;
-        }
-
-        #one {
-            top: 50px;
-            left: 50px;
-        }
-        
-        #two {
-            top: 150px;
-            left: 50px;
-        }
-        
-        #three {
-            top: 250px;
-            left: 50px;
-            color: red;
-        }
-    }
 
 }
 
@@ -200,4 +208,38 @@ div.flex-right.toggleOn li {
     z-index: 2;
     height: 100%;
     width: 100vw;
+}
+
+
+// media querries
+
+@media (max-width: 550px) {
+    div.name-container {
+        width: 95vw !important;
+    }
+    div.name-container .name {
+        font-size: 5rem !important;
+    }
+}
+
+@media (max-width: 400px) {
+    div.name-container .name{
+        font-size: 3rem !important;
+
+        #one {
+            top: 50px;
+            left: 50px;
+        }
+        
+        #two {
+            top: 150px;
+            left: 50px;
+        }
+        
+        #three {
+            top: 250px;
+            left: 50px;
+            color: red;
+        }
+    }
 }
