--- a/styles2.scss
+++ b/styles2.scss
@@ -233,3 +233,26 @@ div.flex-right.toggleOn li {
     height: 100%;
     width: 100vw;
 }
+
+// media query
+
+@media (max-width: 550px) {
+    div.flex-container {
+        flex-direction: column !important;
+
+        .menu {
+            margin-top: 10vh !important;
+        }
+
+    }
+    div.flex-left {
+        transform: translate(-100vh, 0) !important;
+    }
+    div.flex-left.toggleOn{
+        transform: translate(0, 0) !important;
+    }
+
+    div.flex-right {
+        transform: translate(100vh, 0) !important;
+    }
+}
