fixed broken links

--- a/styles2.scss
+++ b/styles2.scss
@@ -242,6 +242,7 @@ div.flex-right.toggleOn li {
 
         .menu {
             margin-top: 10vh !important;
+            padding-inline-start: 0;
         }
 
     }
