fixed navigation ease-in order and opacity to zero when toggled off

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -76,7 +76,8 @@ body {
         border: 1px solid white;
         /* transform: translate(0, 50vh); */
         background-color: red;
-        opacity: .60;
+        /* opacity: .60; */
+        opacity: 0;
         padding: 0; }
       body nav .flex-container .flex-left {
         transform: translate(0, 100vh);
@@ -95,6 +96,8 @@ body {
             transition-delay: 0.2s; }
           body nav .flex-container .flex-right .menu li:nth-child(2) {
             transition-delay: 0.4s; }
+          body nav .flex-container .flex-right .menu li:nth-child(3) {
+            transition-delay: 0.8s; }
           body nav .flex-container .flex-right .menu li {
             margin-bottom: .5rem;
             padding: 0;
@@ -135,10 +138,16 @@ body {
       transition: all 0.5s ease-out; }
 
 div.flex-left.toggleOn {
-  transform: translate(0, 0) !important; }
+  transform: translate(0, 0) !important; 
+  opacity: 0.6 !important;
+  transition: opacity 5s ease-out;
+}
 
 div.flex-right.toggleOn {
-  transform: translate(0, 0) !important; }
+  transform: translate(0, 0) !important; 
+  opacity: 0.6 !important;
+  transition: opacity 5s ease-out;
+}
 
 #line1.toggleOn {
   transform: translate(0, 10px) rotate(0.13turn) !important; }
