--- a/css/styles3.css
+++ b/css/styles3.css
@@ -1,5 +1,4 @@
 body {
-  user-select: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -50,8 +49,7 @@ body {
         border: 1px solid white;
         /* transform: translate(0, 50vh); */
         background-color: red;
-        /* opacity: .60; */
-        opacity: 0;
+        opacity: .60;
         padding: 0;
         z-index: 2; }
       body nav .flex-container .flex-left {
@@ -71,8 +69,6 @@ body {
             transition-delay: 0.2s; }
           body nav .flex-container .flex-right .menu li:nth-child(2) {
             transition-delay: 0.4s; }
-          body nav .flex-container .flex-right .menu li:nth-child(3) {
-            transition-delay: 0.6s; }
           body nav .flex-container .flex-right .menu li {
             margin-bottom: .5rem;
             padding: 0;
@@ -148,16 +144,10 @@ body {
       font-size: 2rem !important; }
 
 div.flex-left.toggleOn {
-  transform: translate(0, 0) !important; 
-  opacity: 0.6 !important;
-  transition: opacity 5s ease-out;
-}
+  transform: translate(0, 0) !important; }
 
 div.flex-right.toggleOn {
-  transform: translate(0, 0) !important; 
-  opacity: 0.6 !important;
-  transition: opacity 5s ease-out;
-}
+  transform: translate(0, 0) !important; }
 
 #line1.toggleOn {
   transform: translate(0, 10px) rotate(0.13turn) !important; }
@@ -197,22 +187,3 @@ div.flex-right.toggleOn li {
 
   div.flex-right {
     transform: translate(100vh, 0) !important; } }
-
-
-
-
-  /* wd , trck, hndle */
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    /* border-radius: 10px; */
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: red;
-    border-radius: 2px;
-  }
-
